changed server startup optionals